test/scc/ext/tm/semantic-errors/023.t
void test()
{
    void(***foo)();
    void(***bar)() _Transaction_safe;
    foo = bar;
}